Fix propagation of ScreenInfo to BrowserPlugins

Currently in RenderWidget whenever ScreenInfo is changed we notify all
BrowserPlugins in the renderer. This is wrong. Only the BrowserPlugins
embedded by that RenderWidget should be notified. This has caused
rendering issues with pdf files both with and without surface sync.

Bug: 796327
Change-Id: I4d8789f809679edba2effe5af95c854bf229187e
Reviewed-on: https://chromium-review.googlesource.com/834152
Reviewed-by: Lucas Gadani <lfg@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Saman Sami <samans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525502}
Former-commit-id: d189e5dfd36549e7078ce0223bec0076bed9a470