content/renderer/render_widget.h
@@ -100,6 +100,7 @@ struct DidOverscrollParams;
 }
 
 namespace content {
+class BrowserPlugin;
 class CompositorDependencies;
 class ExternalPopupMenu;
 class FrameSwapMessageQueue;
@@ -230,6 +231,11 @@ class CONTENT_EXPORT RenderWidget
   // RenderWidget.
   void RegisterRenderFrame(RenderFrameImpl* frame);
   void UnregisterRenderFrame(RenderFrameImpl* frame);
+
+  // BrowserPlugins embedded by this RenderWidget register themselves here.
+  // These plugins need to be notified about changes to ScreenInfo.
+  void RegisterBrowserPlugin(BrowserPlugin* browser_plugin);
+  void UnregisterBrowserPlugin(BrowserPlugin* browser_plugin);
 
   // IPC::Listener
   bool OnMessageReceived(const IPC::Message& msg) override;
@@ -825,6 +831,8 @@ class CONTENT_EXPORT RenderWidget
   // are sent to each frame in the list for events such as changing
   // visibility state for example.
   base::ObserverList<RenderFrameImpl> render_frames_;
+
+  base::ObserverList<BrowserPlugin> browser_plugins_;
 
   bool has_host_context_menu_location_;
   gfx::Point host_context_menu_location_;
